taxman.style.css
body {
  margin: 0;
  padding: 1em 0;
  text-align: center;
  font-family: "Gill Sans", "Gill Sans MT", "Helvetica Neue", "Segoe UI", Calibri, sans-serif;
  font-size: 14px;
  font-weight: 200;
  cursor: default;
}
section {
  display: inline-block;
  width: 100%;
  max-width: 40em;
  text-align: left;
  vertical-align: top;
}

fieldset {
  border: 0;
  margin: 1em 0;
}
legend {
  color: #555;
  font-size: 84%;
  font-weight: 600;
  letter-spacing: 0.02em;
  text-transform: uppercase;
}

input,
label {
  display: inline-block;
  height: 1.2em;
  padding: 0.5em 0.8em;
  border-radius: 0.2em;
  font-family: "Gill Sans", "Gill Sans MT", "Helvetica Neue", "Segoe UI", Calibri, sans-serif;
  font-weight: 200;
}

.toggle {
  display: inline-block;
  margin: 0.2em 0;
  vertical-align: top;
}
.toggle input {
  display: none;
}
.toggle label {
  background-color: #eee;
  cursor: pointer;
}
.toggle label:hover {
  background-color: #ddd;
}
.toggle label:active {
  background-color: #ccc;
}
.toggle input:checked + label {
  background-color: #66d;
  color: #fff;
}
.toggle input:checked + label:hover {
  background-color: #44c;
}
.toggle input:checked + label:active {
  background-color: #22b;
}

.input {
  display: inline-block;
  margin: 0.1em 0;
  vertical-align: top;
}
.input input {
  background-color: #fff;
  transition: background-color 0.8s ease-out;
}
.input:hover input,
.input input.highlight {
  background-color: #ddf;
  transition: background-color 0.2s ease-out;
}
.input label.unit {
  border: thin solid #ddd;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  margin-right: -0.5em;
  background-color: #eee;
}
.input input {
  padding-right: 0.2em;
  border: thin solid #ddd;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  font-size: inherit;
}
.input input + label {
  display: block;
  padding: 0.3em;
  color: #555;
  font-size: 84%;
}

header h1 {
  margin-bottom: 0;
  font-weight: 600;
  color; #222;
}
header h2 {
  margin-top: 0;
  font-weight: 300;
}

#chart svg {
  height: 600px;
}
#chart svg text {
  fill: #555;
  font-family: "Gill Sans", "Gill Sans MT", "Helvetica Neue", "Segoe UI", Calibri, sans-serif;
  font-weight: 200;
}
#chart svg .tick text {
  font-size: 72%;
}
#chart svg .nv-axis path {
  stroke: #e5e5e5;
}
#chart svg text.nv-axislabel {
  font-size: 84%;
  font-weight: 600;
  letter-spacing: 0.01em;
  text-transform: uppercase;
}

.nvtooltip {
  font-family: "Gill Sans", "Gill Sans MT", "Helvetica Neue", "Segoe UI", Calibri, sans-serif;
}
.nvtooltip strong {
  font-weight: 600;
}
.nvtooltip table td.key {
  font-weight: 200;
}
.nvtooltip table td.value {
  font-weight: 600;
}

